--- a/code/React/笔记/08后台管理系统的步骤.md
+++ b/code/React/笔记/08后台管理系统的步骤.md
@@ -12,7 +12,7 @@ let {username,password}=values;
         }).catch(error=>{
             console.log("失败了",error)
         })
-```
+```<p>子组件</p>
 方法（2）用async和await
 ```
 onFinish = async values => {
